--- a/levy.html
+++ b/levy.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         header, footer {
-            background-color: #12be5d;
+            background-color: #213d97;
             color: white;
             text-align: center;
             padding: 1em;
@@ -20,7 +20,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #12be5d;
+            background-color: #213d97;
         }
         nav a {
             color: white;
@@ -29,7 +29,7 @@
             font-weight: bold;
         }
         nav a:hover {
-            background-color: #12be5d;
+            background-color: #213d97;
         }
         .container {
             padding: 20px;
@@ -37,7 +37,7 @@
             margin: auto;
         }
         h2 {
-            color: #12be5d;
+            color: #213d97;
         }
     </style>
 </head>
